2001-11-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-from.c (filter_filter): initialize fromcount to 0.

2001-11-25  Jeffrey Stedfast  <fejj@ximian.com>

	* strlib.c (strlcpy): BSD defines the prototype as returning
	size_t, the strlen of the resultant string.
	(strlcat): Same.

	* gmime-stream-buffer.c (stream_flush): Oops, memmove the buffer
	too and a smidgen of code cleanup.
	(stream_reset): Fix reset for block write mode.

	* configure.in: Bumped the version to 0.7.4 and added checks for
	system mmap functions.

	* gmime-stream-mmap.[c,h]: New stream that uses an mmaped buffer.

2001-11-24  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/gmime-docs.sgml: Added documentation of the use of filters.

2001-11-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-buffer.c (stream_seek): Implemented.

	* gmime-parser.c (parse_content_headers): Fixed another memory
	leak here.

	* gmime-param.c (decode_param_list): Fixed a small memory leak.

2001-11-22  Jeffrey stedfast  <fejj@ximian.com>

	* gmime-filter-from.[c,h]: New filter to escape from-lines.

	* pan-mime-parser.c (parser_read_until_boundary): Slight
	optimization.

2001-11-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (is_8bit_word_encoded): Make into a macro, we
	don't need to do a strlen because the atom is a GString which
	means we have it's length already. This also saves us some
	overhead of calling a function.
	(g_mime_utils_8bit_header_decode): Update to pass the len argument
	to is_8bit_word_encoded.

2001-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 0.7.3

	* gmime-param.c: GMimeParam is now a linked list of parameters
	rather than a single name/value pair.
	(g_mime_param_new_from_string): Now returns a parameter list based
	on the input string rather than only returning a single parameter
	name/value pair. Also updated to handle rfc2184 encoded
	parameters.
	(g_mime_param_destroy): Destroy the linked list of params.